--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ version = "0.0.2"
 description = "Fully reverse engeenired Shazam API"
 authors = [
     "Numenorean <41187266@users.noreply.github.com>",
-    "Alexander Pushkov <alexander@notpushk.in>"
+    "Alexander Pushkov <alexander@notpushk.in>",
 ]
 license = "MIT"
 
@@ -23,6 +23,21 @@ isort = "^5.10.1"
 rope = "^0.23.0"
 autopep8 = "^1.6.0"
 ipython = "^8.2.0"
+flakeheaven = "^0.11.1"
+
+[tool.flakeheaven]
+base = [".flakeheaven.toml"]
+
+[tool.mypy]
+plugins = "pydantic.mypy,sqlmypy"
+
+[tool.isort]
+multi_line_output = 3
+include_trailing_comma = true
+use_parentheses = true
+
+[tool.pydocstyle]
+convention = "google"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
