Import Final from typing_extensions on Python 3.7
noqa is needed to work around the following issues in WPS:

https://github.com/wemake-services/wemake-python-styleguide/issues/1385
https://github.com/wemake-services/wemake-python-styleguide/issues/2382

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ rope = "^0.23.0"
 autopep8 = "^1.6.0"
 ipython = { version = "^8.2.0", python = "^3.8" }
 flakeheaven = "^0.11.1"
+typing-extensions = { version = "^4.1.1", python = "< 3.8" }
 
 [tool.flakeheaven]
 base = [".flakeheaven.toml"]
